# MetaMind

./: .dockerignore  .gitignore  Dockerfile  QUICKSTART.md  README.md  TECHNICAL_ARCHITECTURE.md  VECTOR_SEARCH_GUIDE.md  VECTOR_SEARCH_IMPLEMENTATION.md  index.html  package.json  playwright.config.ts  setup.bat  setup.sh  tailwind.config.js  tsconfig.json  vitest.config.ts
.github/workflows/: build.yml  release.yml  test.yml
docs/: index.html  script.js  style.css
plugins/example-plugin/: README.md  index.js  plugin.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_integration.rs  cloud_sync.rs  config.rs  database.rs  error.rs  error_reporting.rs  file_processor.rs  folder_vectorizer.rs  knowledge_base.rs  lib.rs  main.rs  notifications.rs  platform_optimizations.rs  plugin_system.rs  search_engine.rs  security.rs  semantic_search.rs  system_monitor.rs  system_tray.rs  updater.rs  vector_benchmarks.rs  vector_cache.rs  vector_math.rs  vector_storage.rs
src-tauri/src/ai_processor/: mod.rs
src-tauri/src/content_extractor/: mod.rs  tests.rs
src-tauri/src/database/: mod.rs  tests.rs
src-tauri/src/file_monitor/: mod.rs
src-tauri/src/processing_queue/: mod.rs
src-tauri/tests/: integration_tests.rs  performance_tests.rs
src/components/collections/: Collections.tsx
src/components/common/: Button.tsx  ErrorBoundary.tsx  Input.tsx  LoadingScreen.tsx  Logo.tsx
src/components/common/__tests__/: Button.test.tsx  Logo.test.tsx
src/components/insights/: Insights.tsx
src/components/insights/__tests__/: InsightsDashboard.test.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/components/onboarding/: CompletionStep.tsx  FolderSelectionStep.tsx  ModelSelectionStep.tsx  Onboarding.tsx  PerformanceSetupStep.tsx  SystemAnalysisStep.tsx  WelcomeStep.tsx
src/components/plugins/: PluginManager.tsx
src/components/search/: SearchFilters.tsx  SearchInterface.tsx  SearchResults.tsx  VisualSearch.tsx  VoiceSearch.tsx
src/components/search/__tests__/: SearchInterface.test.tsx
src/components/settings/: AdvancedSettings.tsx  CloudSyncSettings.tsx  Settings.tsx
src/hooks/: useTheme.ts
src/services/: fileProcessingService.ts
src/stores/: useAppStore.ts  useCollectionsStore.ts  useSearchStore.ts  useSystemStore.ts
src/stores/__tests__/: useIndexStore.test.ts  useInsightsStore.test.ts  useSearchStore.test.ts
src/styles/: globals.css
src/test/: setup.ts  utils.tsx
src/types/: index.ts
src/utils/: browserDetection.ts  fileUtils.ts  tauri.ts
tests/e2e/: app.spec.ts  indexing.spec.ts  search.spec.ts
