[package]
name = "metamind"
version = "0.0.0"
description = "AI-Powered File Intelligence System"
authors = ["MetaMind Team"]
license = "MIT"
repository = "https://github.com/metamind/metamind"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [ "window-minimize", "window-maximize", "dialog-confirm", "notification-all", "window-hide", "fs-all", "app-show", "path-all", "dialog-open", "window-unminimize", "dialog-message", "app-hide", "window-start-dragging", "window-show", "window-unmaximize", "dialog-ask", "window-close", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"
num_cpus = "1.16"
sysinfo = "0.29"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
