[package]
name = "metamind"
version = "0.0.0"
description = "AI-Powered File Intelligence System"
authors = ["MetaMind Team"]
license = "MIT"
repository = "https://github.com/metamind/metamind"
edition = "2021"

[lib]
name = "metamind"
path = "src/lib.rs"

[[bin]]
name = "metamind"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [ "window-minimize", "window-maximize", "dialog-confirm", "notification-all", "window-hide", "fs-all", "app-show", "path-all", "dialog-open", "window-unminimize", "dialog-message", "app-hide", "window-start-dragging", "window-show", "window-unmaximize", "dialog-ask", "window-close", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"
num_cpus = "1.16"
sysinfo = "0.29"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"

# Security and encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
keyring = "2.0"

# Cloud sync dependencies
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "json"] }

# File system monitoring
notify = "6.1"
walkdir = "2.4"

# Content extraction
pdf-extract = "0.7"
lopdf = "0.32"
image = "0.24"
# kamadak-exif = "0.5"  # Temporarily disabled

# Text processing and AI features (temporarily using older compatible versions)
# tokenizers = "0.15"
# candle-core = "0.6" 
# candle-nn = "0.6"
# candle-transformers = "0.6"

# Search
tantivy = "0.22"

# File handling
mime_guess = "2.0"
infer = "0.15"

[dev-dependencies]
tempfile = "3.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
